<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:id="@+id/album_img_list_view"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_margin="4dp"
            android:scaleType="centerCrop"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/album_name_list_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/artist_popularity"
                    android:gravity="center_vertical"
                    android:textColor="#000"/>
                <TextView
                    android:id="@+id/album_popularity_list_view"
                    android:layout_marginLeft="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/album_release"
                    android:gravity="center_vertical"
                    android:textColor="#000"/>
                <TextView
                    android:id="@+id/album_release_list_view"
                    android:layout_marginLeft="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/album_song_name"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:textSize="10sp"
                    android:lines="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:textColor="#000"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="10sp"
                        android:text="@string/album_song_time"
                        android:gravity="center_vertical"
                        android:textColor="#000"/>
                    <TextView
                        android:id="@+id/album_song_time"
                        android:textSize="10sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

       
    </LinearLayout>

</LinearLayout>